{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 12,
  "lineage": "978d7f8a-1c15-95d6-cddb-a0e0b99d4e56",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "appserverELB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:545135175756:loadbalancer/appserverELB",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "appserverELB-42679911.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "appserverELB",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "appserverELB",
            "security_groups": [
              "sg-0bfbc90da8c093b95"
            ],
            "source_security_group": "545135175756/default_elb_d50814e1-e651-367b-bad7-7ba1f9e4e1f3",
            "source_security_group_id": "sg-0bfbc90da8c093b95",
            "subnets": [
              "subnet-09713728",
              "subnet-4d96ee2b"
            ],
            "tags": {
              "Name": "appserverELB"
            },
            "tags_all": {
              "Name": "appserverELB"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:545135175756:instance/i-0ffb9dee5c66a2ec5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffb9dee5c66a2ec5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b9cfd158594debcd",
            "private_dns": "ip-172-31-15-60.ec2.internal",
            "private_ip": "172.31.15.60",
            "public_dns": "ec2-3-237-240-55.compute-1.amazonaws.com",
            "public_ip": "3.237.240.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05dbf3e3e9e4900bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4d96ee2b",
            "tags": {
              "Name": "appserver"
            },
            "tags_all": {
              "Name": "appserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-68ef486f"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "appserverIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545135175756:internet-gateway/igw-01f00f6490ab4e43f",
            "id": "igw-01f00f6490ab4e43f",
            "owner_id": "545135175756",
            "tags": {
              "Name": "appserverIGW"
            },
            "tags_all": {
              "Name": "appserverIGW"
            },
            "vpc_id": "vpc-0ad54f0deff3a2cd6"
          },
          "dependencies": [
            "aws_vpc.appserverVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545135175756:route-table/rtb-0c9784ba74db5ba97",
            "id": "rtb-0c9784ba74db5ba97",
            "owner_id": "545135175756",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privroutetable"
            },
            "tags_all": {
              "Name": "privroutetable"
            },
            "vpc_id": "vpc-0ad54f0deff3a2cd6"
          },
          "dependencies": [
            "aws_vpc.appserverVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545135175756:route-table/rtb-06444ecd049ee490f",
            "id": "rtb-06444ecd049ee490f",
            "owner_id": "545135175756",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f00f6490ab4e43f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubroutetable"
            },
            "tags_all": {
              "Name": "pubroutetable"
            },
            "vpc_id": "vpc-0ad54f0deff3a2cd6"
          },
          "dependencies": [
            "aws_internet_gateway.appserverIGW",
            "aws_vpc.appserverVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "appserverSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545135175756:security-group/sg-0263976d83c1fd2b5",
            "description": "Allow appserverSG inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0263976d83c1fd2b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "appserverSG from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "appserverSG from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "appserverSG",
            "name_prefix": "",
            "owner_id": "545135175756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "appserverSG"
            },
            "tags_all": {
              "Name": "appserverSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad54f0deff3a2cd6"
          },
          "dependencies": [
            "aws_vpc.appserverVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545135175756:subnet/subnet-0a113a1faf23a5cef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a113a1faf23a5cef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "545135175756",
            "tags": {
              "Name": "privsubner"
            },
            "tags_all": {
              "Name": "privsubner"
            },
            "vpc_id": "vpc-0ad54f0deff3a2cd6"
          },
          "dependencies": [
            "aws_vpc.appserverVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545135175756:subnet/subnet-0deff5074d0e47996",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0deff5074d0e47996",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "545135175756",
            "tags": {
              "Name": "pubsubner"
            },
            "tags_all": {
              "Name": "pubsubner"
            },
            "vpc_id": "vpc-0ad54f0deff3a2cd6"
          },
          "dependencies": [
            "aws_vpc.appserverVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "appserverVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545135175756:vpc/vpc-0ad54f0deff3a2cd6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-045b7ebdc4b4a0ef9",
            "default_route_table_id": "rtb-0ac96d4ad92ab5221",
            "default_security_group_id": "sg-071b44ba5f5210083",
            "dhcp_options_id": "dopt-826859f8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ad54f0deff3a2cd6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ac96d4ad92ab5221",
            "owner_id": "545135175756",
            "tags": {
              "Name": "appserverVPC"
            },
            "tags_all": {
              "Name": "appserverVPC"
            }
          }
        }
      ]
    }
  ]
}